# RAG_Learn_2026

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  test_embedding.py  test_llm.py  test_vector_store.py
contributions/: README.md
contributions/templates/: architecture_template.md
data/: README.md
data/sample/: .gitkeep  documents.json
data/scripts/: README.md
docs/0-prerequisites/: 0.1-python-env.md  0.2-dependencies.md  1-transformer.md  2-prompt-engineering.md  3-fine-tuning.md  4-traditional-retrieval.md  5-dense-retrieval.md  6-vector-db.md  README.md
docs/1-foundations/: 1-what-is-rag.md  2-why-rag.md  3-retrieval.md  4-augmentation.md  5-generation.md  6-langchain-intro.md  7-llamaindex-intro.md  8-hello-world.md  README.md
docs/2-architectures/: README.md
docs/3-advanced/: README.md
docs/4-future/: README.md
experiments/: __init__.py  run_experiment.py
experiments/configs/: agentic_rag.yaml  standard_rag.yaml
notebooks/: 1_basic_rag.ipynb  README.md
references/: README.md
src/: __init__.py
src/evaluation/: __init__.py  metrics.py
src/generators/: __init__.py  base.py  chat.py  llm.py
src/pipelines/: __init__.py  agentic.py  base.py  conversational.py  hybrid.py  standard.py
src/retrievers/: __init__.py  base.py  dense.py  graph.py  hybrid.py  sparse.py
src/utils/: __init__.py  config.py  document_loader.py  text_processing.py  vector_store.py
tests/rag_architectures/: 01_standard_rag.py  02_conversational_rag.py  03_corrective_rag.py  04_adaptive_rag.py  05_self_rag.py  06_fusion_rag.py  07_hyde.py  08_agentic_rag.py  09_graph_rag.py  10_replug.py  11_iterative_rag.py  12_in_context_ralm.py  13_flare.py  14_multimodal_rag.py  15_self_ask_rag.py  (+9 more)
(+61 files in other folders)
